--- a/CNN_model.ipynb
+++ b/CNN_model.ipynb
@@ -37,61 +37,21 @@
         "id": "wIF-EMiC3xuG"
       },
       "source": [
-        "# AML Assignment 3"
+        "# AML Assignment 3\n",
+        "\n",
+        "Federico Alberici, n. 808058"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CY6yX0Y53_i8",
-        "outputId": "884a248c-887e-4b6a-ef44-c9abc1622927",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "CY6yX0Y53_i8"
       },
       "source": [
         "!pip install livelossplot"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting livelossplot\n",
-            "  Downloading https://files.pythonhosted.org/packages/0f/08/1884157a3de72d41fa97cacacafaa49abf00eba53cb7e08615b2b65b4a9d/livelossplot-0.5.3-py3-none-any.whl\n",
-            "Requirement already satisfied: bokeh; python_version >= \"3.6\" in /usr/local/lib/python3.6/dist-packages (from livelossplot) (2.1.1)\n",
-            "Requirement already satisfied: ipython in /usr/local/lib/python3.6/dist-packages (from livelossplot) (5.5.0)\n",
-            "Requirement already satisfied: matplotlib; python_version >= \"3.6\" in /usr/local/lib/python3.6/dist-packages (from livelossplot) (3.2.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (2.8.1)\n",
-            "Requirement already satisfied: Jinja2>=2.7 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (2.11.2)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (1.18.5)\n",
-            "Requirement already satisfied: pillow>=4.0 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (7.0.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (3.7.4.3)\n",
-            "Requirement already satisfied: tornado>=5.1 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (5.1.1)\n",
-            "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (3.13)\n",
-            "Requirement already satisfied: packaging>=16.8 in /usr/local/lib/python3.6/dist-packages (from bokeh; python_version >= \"3.6\"->livelossplot) (20.4)\n",
-            "Requirement already satisfied: traitlets>=4.2 in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (4.3.3)\n",
-            "Requirement already satisfied: setuptools>=18.5 in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (50.3.2)\n",
-            "Requirement already satisfied: simplegeneric>0.8 in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (0.8.1)\n",
-            "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (4.8.0)\n",
-            "Requirement already satisfied: decorator in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (4.4.2)\n",
-            "Requirement already satisfied: pygments in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (2.6.1)\n",
-            "Requirement already satisfied: prompt-toolkit<2.0.0,>=1.0.4 in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (1.0.18)\n",
-            "Requirement already satisfied: pickleshare in /usr/local/lib/python3.6/dist-packages (from ipython->livelossplot) (0.7.5)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.6/dist-packages (from matplotlib; python_version >= \"3.6\"->livelossplot) (0.10.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib; python_version >= \"3.6\"->livelossplot) (1.3.1)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.6/dist-packages (from matplotlib; python_version >= \"3.6\"->livelossplot) (2.4.7)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.1->bokeh; python_version >= \"3.6\"->livelossplot) (1.15.0)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from Jinja2>=2.7->bokeh; python_version >= \"3.6\"->livelossplot) (1.1.1)\n",
-            "Requirement already satisfied: ipython-genutils in /usr/local/lib/python3.6/dist-packages (from traitlets>=4.2->ipython->livelossplot) (0.2.0)\n",
-            "Requirement already satisfied: ptyprocess>=0.5 in /usr/local/lib/python3.6/dist-packages (from pexpect; sys_platform != \"win32\"->ipython->livelossplot) (0.6.0)\n",
-            "Requirement already satisfied: wcwidth in /usr/local/lib/python3.6/dist-packages (from prompt-toolkit<2.0.0,>=1.0.4->ipython->livelossplot) (0.2.5)\n",
-            "Installing collected packages: livelossplot\n",
-            "Successfully installed livelossplot-0.5.3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -123,7 +83,7 @@
         "np.random.seed(42)\n",
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,13 +96,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cEV7fge9_MWb"
+      },
+      "source": [
+        "First of all we proceed to import the MNIST dataset and then we scale the image into the [0;1] range to speed up the learning process. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0sJsCcgz3xuG",
-        "outputId": "e52c807f-329a-4e16-8698-452c31d780bc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e52c807f-329a-4e16-8698-452c31d780bc"
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()\n",
@@ -157,7 +126,7 @@
         "print(x_train.shape[0], \"train samples\")\n",
         "print(x_test.shape[0], \"test samples\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,18 +141,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VoLkB1ysAQUS"
+      },
+      "source": [
+        "As regularization technique **data augmentation** is choosed because is a simple yet powerfull method to improve accuracy over validation and test set. \n",
+        "In images below we can se the augmented data for the sample classified as a two:\n",
+        "- the first is the original image;\n",
+        "- in the second gaussian noise is added;\n",
+        "- in the third salt and pepper noise is added."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "tags": [],
         "id": "kDGfQRJM3xuH",
-        "outputId": "9d7b9ad4-d8e3-431d-a07b-15b12a464062",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 812
-        }
+        },
+        "outputId": "9d7b9ad4-d8e3-431d-a07b-15b12a464062"
       },
       "source": [
-        "# First let's augment the dataset by adding new gaussian noised images\n",
+        "# Let's augment the dataset by adding new gaussian noised images\n",
         "def add_noise(img, mode:str):\n",
         "    noised_img = random_noise(image=img, mode=mode, seed=42, clip=True)\n",
         "    return noised_img\n",
@@ -201,7 +183,7 @@
         "plt.imshow(add_noise(x_train[5], 's&p')*255, cmap='gray')\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,6 +248,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3exn_KRaBNLO"
+      },
+      "source": [
+        "For each training sample the gaussian and s&p noised version is added to the training set, tripling it's size."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jQWcyzHJ3xuH"
@@ -294,17 +285,17 @@
         "\n",
         "shuffle_in_unison(x_train_noised, y_train_noised)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0x9T5q3v3xuH",
-        "outputId": "a93e1ca5-1ab6-4c2e-d316-4295ae524813",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a93e1ca5-1ab6-4c2e-d316-4295ae524813"
       },
       "source": [
         "# Make images with size (28,28,1)\n",
@@ -315,12 +306,12 @@
         "print(x_train_noised.shape[0], \"train samples\")\n",
         "print(x_test.shape[0], \"test samples\")\n",
         "\n",
-        "# convert class vectors to bimnary class matrices\n",
+        "# convert class vectors to binary class matrices\n",
         "y_train_noised = keras.utils.to_categorical(y_train_noised, num_classes)\n",
         "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
         "y_test = keras.utils.to_categorical(y_test, num_classes)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,17 +330,32 @@
         "id": "24LquGGr3xuH"
       },
       "source": [
-        "## Model definition"
+        "## Model definition\n",
+        "\n",
+        "The model is composed by 3 convolutional layer, followed by a single fully connected layer that map each input to the predicted class.\n",
+        "Let's see each layer in details:\n",
+        "\n",
+        "### First CL\n",
+        "Composed by a 1x1x6 filter for dimensionality reduction, followed by a 3x3x6 filter and a 3x3 max pooling layer.\n",
+        "\n",
+        "### Second CL\n",
+        "Composed by a 1x1x14 filter for dimensionality reduction, followed by a 3x3x14 filter and a 2x2 max pooling layer. the number of filters is **approximately** (because size constraint) doubled compared to the previous layer.\n",
+        "\n",
+        "### Third CL\n",
+        "Composed by a 1x1x28 filter for dimensionality reduction, followed by a 2x2x28 filter and a dropout layer with probability of 0.5. the number of filters is **exactly** doubled compared to the previous layer.\n",
+        "\n",
+        "### FC layer\n",
+        "The last convolutional layer is flattened and than fully connected to the 10 neuron (equal to the number of classes) output layer, with softmax activation function.\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lY21wM7o3xuH",
-        "outputId": "35f135bf-c684-4ac0-a3df-48441fd02aa7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "35f135bf-c684-4ac0-a3df-48441fd02aa7"
       },
       "source": [
         "model = keras.Sequential(\n",
@@ -371,7 +377,7 @@
         "\n",
         "model.summary()\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,14 +418,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "40_T4ni8G9Lh"
+      },
+      "source": [
+        "## Model training and results visualization\n",
+        "\n",
+        "Finally the model is trained and the loss and the accuracy is plotted in live to visualize better how the training is going.\n",
+        "As optimizer Adam is choosed for is well known great performance in most of learning tasks. Actually the learning rate is a little bit smaller from the keras default (0.001) to stabilize the learning when the optimization is converging. The small learning rate is not a problem because the model is limited to only 7k parameter, so the iterations are very fast."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hp3YOuvv3xuH",
-        "outputId": "8954b12c-a23e-4546-98fe-fb82171c7e4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 704
-        }
+        },
+        "outputId": "8954b12c-a23e-4546-98fe-fb82171c7e4b"
       },
       "source": [
         "batch_size = 64\n",
@@ -434,7 +452,7 @@
         "    verbose=0,\n",
         "    callbacks=[PlotLossesKeras()])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -476,18 +494,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n2RdRK5DI_Kw"
+      },
+      "source": [
+        "The accuracy obtained in the test set is close to 99%, a very good result! Maybe we can get a little more just by adding more epochs in the training phase, always being careful for overfitting."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vOumJV-e3xuH",
-        "outputId": "c8344894-2f08-4031-effe-9c8ebd636db7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8344894-2f08-4031-effe-9c8ebd636db7"
       },
       "source": [
         "model.evaluate(x_test, y_test)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
