Fixed some typos

--- a/CNN_model.ipynb
+++ b/CNN_model.ipynb
@@ -336,13 +336,13 @@
         "Let's see each layer in details:\n",
         "\n",
         "### First CL\n",
-        "Composed by a 1x1x6 filter for dimensionality reduction, followed by a 3x3x6 filter and a 3x3 max pooling layer.\n",
+        "Composed by an 1x1x6 filter for dimensionality reduction, followed by a 3x3x6 filter and a 3x3 max pooling layer.\n",
         "\n",
         "### Second CL\n",
-        "Composed by a 1x1x14 filter for dimensionality reduction, followed by a 3x3x14 filter and a 2x2 max pooling layer. the number of filters is **approximately** (because size constraint) doubled compared to the previous layer.\n",
+        "Composed by an 1x1x14 filter for dimensionality reduction, followed by a 3x3x14 filter and a 2x2 max pooling layer. the number of filters is **approximately** (because size constraint) doubled compared to the previous layer.\n",
         "\n",
         "### Third CL\n",
-        "Composed by a 1x1x28 filter for dimensionality reduction, followed by a 2x2x28 filter and a dropout layer with probability of 0.5. the number of filters is **exactly** doubled compared to the previous layer.\n",
+        "Composed by an 1x1x28 filter for dimensionality reduction, followed by a 2x2x28 filter and a dropout layer (probability 0.5). the number of filters is **exactly** doubled compared to the previous layer.\n",
         "\n",
         "### FC layer\n",
         "The last convolutional layer is flattened and than fully connected to the 10 neuron (equal to the number of classes) output layer, with softmax activation function.\n"
